--- a/index.html
+++ b/index.html
@@ -5,222 +5,190 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head profile="http://www.w3.org/2005/10/profile">
+    <link rel="icon"
+    type="image/png"
+    href="./pictures/ring-con.png"/> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Lobster|Open+Sans" rel="stylesheet">
-
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Quicksand:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+  <title>Camilley Girl</title>
 </head>
 
 <body>
-  <!-- the header first make the whole top black and fixed-->
-  <nav class="navbar navbar-expand-lg nav text-light nav-color">
-    <!-- then make a container so the text is in from the edge -->
-    <div class="container">
-      <a class="navbar-brand brand-name navbar-fixed-top">Camilley Girl</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <!-- change the current as I work on the other pages.  this is the one that is bold at the time.
-                        add in the href for the page once created-->
-            <a class="nav-link" href="about-link">About
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="port.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <!-- this is a drop down link for possible past sucess stories? suggest to meg. -->
-        </ul>
-      </div>
+    <nav class="navbar navbar-expand-sm navbar-light sticky-top">
+        <div class="container">
+      <a class="navbar-brand" href="#top">Camilley Girl</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#meet">Designer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#collection">Collection</a>
+        </li>
+        <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+       </li>
+      </ul>
     </div>
-  </nav>
+    </nav>
 
 
-  <div class="parallax first-parallax">
-    <!-- below is text over background image -->
+
+  <div class="parallax first-parallax" id="top">
+    <div class="cold-md-12">
     <div class="home-page-text">
       <h1 class="home-text">Camilley Girl</h1>
+    </div>
       <h2 class="lead-body">Shop local, shop small, with Camille Conaway-Heffner in Lititz Pa.
         <br>Hand crafted leather accessories with attention to detail</h2>
     </div>
+    <div id="meet"></div>
   </div>
 
 
   <!-- second time doing parrallax -->
-
-
-  <div class="container">
-    <div class="row">
-      <div class="header lead-body about-link">Meet the Designer </div>
-    </div>
-    <div class="row bio-row">
-      <div class="col-md-12">
-        <img class="selfport" src="pictures/camille-photo.jpg" alt="Image of Camille">
+  <div class="container container1">
+      <div class="row">
+        <div class="col-md-12">
+        <div class="lead-body">Meet the Designer </div>
       </div>
-      <p class="paragraph-details">Camille Conaway-Heffner is a Lititz PA based designer who launched her leather jewelry and accessories line Camilley
-        Girl in 2017. Camille works with calf, kid, and lamb skin to make easy-to-wear pieces: many which are one of a kind.
-        <br> Camille attended the Fashion Institute of Technology in New York City and graduated with a bachelors degree in accessories
-        design and fabrication. This accomplishment was the fulfillment of her childhood dream of learning how to work with
-        leather to make shoes and handbags from concept to finished product. You can find Camilley Girl at various shops
-        in eastern Pennsylvania and Etsy.com.
-      </p>
+      </div>
+      <div class="row bio-row">
+        <div class="col-md-12">
+          <img class="selfport" src="pictures/camille-photo.jpg" alt="Image of Camille">
+        </div>
+        <p class="paragraph-details">Camille Conaway-Heffner is a Lititz PA based designer who launched her leather jewelry and accessories line Camilley
+          Girl in 2017. Camille works with calf, kid, and lamb skin to make easy-to-wear pieces: many which are one of a kind.
+          <br> Camille attended the Fashion Institute of Technology in New York City and graduated with a bachelors degree in accessories
+          design and fabrication. This accomplishment was the fulfillment of her childhood dream of learning how to work with
+          leather to make shoes and handbags from concept to finished product. You can find Camilley Girl at various shops
+          in eastern Pennsylvania and Etsy.com.
+        </p>
+      </div>
     </div>
 
-  </div>
+    <div class="parallax first-parallax"  id="collection">
+        <div class="cold-md-12">
+        <div class="home-page-text">
+          <h1 class="home-text">See the collection</h1>
+          <h2>leather. Hand crafted. Edgy.</h2>
+
+        </div>
+        </div>
+      </div>
+
 
 
   <div class="second-parallax">
-    <div class="container">
-      <h1 class="header lead-body">See the collection</h1>
-      <h2 class="mainboxtitle">leather. Hand crafted. Edgy.</h2>
-      <!-- Here I create the container for the margins to be set, then add the cards for the picture images. -->
+    <div class="container container2">
       <div class="row">
         <!-- Here is row 1 -->
-        <div class="col-md-4">
+        <div class="col-md-4 card-spacing">
           <div class="card" id="port-image-2" style="width: 20rem;">
             <img class="card-img-btm" src="pictures/assorted-necklaces.jpg">
-
             <div class="card-block">
-              <!-- <h4 class="card-title interesttitle">Assorted Necklaces</h4> -->
-              <!-- <p class="card-text card-text-edit">text</p> -->
             </div>
           </div>
 
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 card-spacing">
           <div class="card" id="port-image-2" style="width: 20rem;">
             <img class="card-img-btm" src="pictures/arrowhead.jpg">
-
-            <!-- <div class="card-block card-styles">
-              <!-<h4 class="card-title interesttitle">Arrowhead</h4> -->
-            <!-- <p class="card-text card-text-edit">text</p> -->
-            <!-- </div> -->
           </div>
         </div>
 
-        <div class="cold-md-4">
+        <div class="cold-md-4 card-spacing">
 
           <div class="card" id="port-image-3" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/heartbreaker-chain.jpg" alt="assorted calf and kid keychains">
+            <img class="card-img-btm" src="pictures/heartbreaker-chain.jpg" alt="assorted calf and kid keychains">
             <div class="card-block">
-              <!-- <h4 class="card-title interesttitle">Calf and Kid keychains</h4> -->
-              <!-- <p class="card-text card-text-edit">text</p> -->
             </div>
           </div>
         </div>
       </div>
       <!-- This is the second row     -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-4" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/metalllic-cuffs.jpg" alt="self portrait">
+            <img class="card-img-btm" src="pictures/metalllic-cuffs.jpg" alt="self portrait">
             <div class="card-block">
-              <!-- <h4 class="card-title interesttitle">Bangles</h4> -->
-              <!-- <p class="card-text card-text-edit">text.</p> -->
             </div>
           </div>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-5" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/assorted-keychains-6.jpg" alt="flowers white and blue">
+            <img class="card-img-btm" src="pictures/assorted-keychains-6.jpg" alt="flowers white and blue">
             <div class="card-block card-styles">
-              <!-- <h4 class="card-title interesttitle">Assorted Bracelets</h4> -->
-              <!-- <p class="card-text card-text-edit">text</p> -->
             </div>
           </div>
 
         </div>
-        <div class="cold-md-4">
+        <div class="cold-md-4 card-spacing">
 
           <div class="card" id="port-image-6" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/leather-earrings-2.jpg" alt="women in marker drawing">
-            <div class="card-block">
-              <!-- <h4 class="card-title interesttitle">Metallic Leather Cuffs</h4> -->
-              <!-- <p class="card-text card-text-edit">text</p> -->
-            </div>
+            <img class="card-img-btm" src="pictures/leather-earrings-2.jpg" alt="women in marker drawing">
           </div>
+          <h3><br>Hand crafted<br> <br>Fine Leather goods<br> <br>No Two are the Same</h3>
         </div>
       </div>
 
 
       <!-- this is the third row -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-7" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/leather-hoop-3.jpg" alt="self portrait">
+            <img class="card-img-btm" src="pictures/leather-hoop-3.jpg" alt="self portrait">
             <div class="card-block">
-              <!-- <h4 class="card-title interesttitle">Calfskin Tassel Earings</h4> -->
-              <!-- <p class="card-text card-text-edit">text.</p> -->
             </div>
           </div>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-8" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/kid-keychains-5.jpg" alt="flowers white and blue">
+            <img class="card-img-btm" src="pictures/kid-keychains-5.jpg" alt="flowers white and blue">
             <div class="card-block">
-              <!-- <h4 class="card-title interesttitle">Solo Tassel Necklace</h4> -->
-              <!-- <p class="card-text card-text-edit">text</p> -->
             </div>
           </div>
 
         </div>
-        <div class="cold-md-4">
+        <div class="cold-md-4 card-spacing">
 
           <div class="card" id="port-image-9" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/one.jpg" alt="women in marker drawing">
-            <!-- <div class="card-block">
-              <h4 class="card-title interesttitle">Pale gold leather leaf</h4>
-              <! <p class="card-text card-text-edit">text</p> -->
-            <!-- </div>  -->
+            <img class="card-img-btm" src="pictures/one.jpg" alt="women in marker drawing">
           </div>
         </div>
       </div>
       <!-- This is the 4th row -->
       <div class="row">
-        <div class="col-md-4">
-
+        <div class="col-md-4 card-spacing">
           <div class="card" id="port-image-10" style="width: 20rem;">
-            <img class="card-img-top" src="pictures/assorted-bracelets.jpg" alt="self portrait">
-            <!-- <div class="card-block">
-              <h4 class="card-title interesttitle">Arrowhead leather Earrings</h4>
-              <!- <p class="card-text card-text-edit">text.</p> -->
-          </div>
-        </div>
+             <h3><br>For Sale<br> <br>craft fairs<br> <br>Special Order<br><br>On Etsy<br><br>The Purple Robin<br><br>Lilitz, PA<br></h3>
 
-      <div class="col-md-4">
+         </div>
+        </div> 
+
+      <div class="col-md-4 card-spacing">
 
         <div class="card" id="port-image-11" style="width: 20rem;">
-          <img class="card-img-top" src="pictures/bangles-3.jpg" alt="flowers white and blue">
-          <!-- <div class="card-block"> -->
-            <!-- <h4 class="card-title interesttitle">Assorted Bracelets</h4> -->
-            <!-- <p class="card-text card-text-edit">text</p> -->
-          <!-- </div> -->
+          <img class="card-img-btm" src="pictures/bangles-3.jpg" alt="flowers white and blue">
         </div>
 
       </div>
-      <div class="cold-md-4">
+      <div class="cold-md-4 card-spacing">
 
         <div class="card" id="port-image-12" style="width: 20rem;">
-          <img class="card-img-top" src="pictures/distressed-brac.jpg" alt="women in marker drawing">
+          <img class="card-img-btm" src="pictures/distressed-brac.jpg" alt="women in marker drawing">
           <div class="card-block">
-            <!-- <h4 class="card-title interesttitle">Large tassel trio on rubber cord</h4> -->
-            <!-- <p class="card-text card-text-edit">text</p> -->
           </div>
         </div>
       </div>
@@ -229,14 +197,17 @@
   </div>
 
 
-  <!-- creating a sticky footer for all of the pages -->
-  <!-- <div class="container footer-style"> -->
-    <footer class="footer">
+  
+
+
+    <footer class="footer" id="contact">
         <div class="container footer-style">
 
-      <h3 class="connectFooter">Connect.
-        <span class="spacer"> </span> Contact.
-        <span class="spacer"></span> Purchase.</h3>
+      <h3 class="connectFooter">
+          <div class="lead-body">Contact the Designer </div>
+         <h3>Shop at Etsy or for Customer Orders Email Camilley</h3>
+       
+        <span class="spacer"></span></h3>
       <!-- links to etsy, and email -->
       <div class="container">
       <div class="linkimages">
@@ -257,9 +228,7 @@
     </footer>
  
 
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
   <script src="animate.js"></script>
 
