--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <head profile="http://www.w3.org/2005/10/profile">
-    <link rel="icon"
-    type="image/png"
-    href="./pictures/ring-con.png"/> 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Lobster|Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Quicksand:300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-  <title>Camilley Girl</title>
-</head>
+    <link rel="icon" type="image/png" href="./pictures/ring-con.png" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Lobster|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Quicksand:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <title>Camilley Girl</title>
+  </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light sticky-top">
-        <div class="container">
+  <nav class="navbar navbar-expand-sm navbar-light sticky-top">
+    <div class="container">
       <a class="navbar-brand" href="#top">Camilley Girl</a>
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -30,19 +29,19 @@
           <a class="nav-link" href="#collection">Collection</a>
         </li>
         <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-       </li>
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
       </ul>
     </div>
-    </nav>
+  </nav>
 
 
 
   <div class="parallax first-parallax" id="top">
     <div class="cold-md-12">
-    <div class="home-page-text">
-      <h1 class="home-text">Camilley Girl</h1>
-    </div>
+      <div class="home-page-text">
+        <h1 class="home-text">Camilley Girl</h1>
+      </div>
       <h2 class="lead-body">Shop local, shop small, with Camille Conaway-Heffner in Lititz Pa.
         <br>Hand crafted leather accessories with attention to detail</h2>
     </div>
@@ -52,34 +51,43 @@
 
   <!-- second time doing parrallax -->
   <div class="container container1">
-      <div class="row">
-        <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-12">
         <div class="lead-body">Meet the Designer </div>
       </div>
+    </div>
+    <div class="row bio-row">
+      <div class="col-md-12">
+        <img class="selfport" src="pictures/camille-photo.jpg" alt="Image of Camille">
       </div>
-      <div class="row bio-row">
-        <div class="col-md-12">
-          <img class="selfport" src="pictures/camille-photo.jpg" alt="Image of Camille">
-        </div>
-        <p class="paragraph-details">Camille Conaway-Heffner is a Lititz PA based designer who launched her leather jewelry and accessories line Camilley
-          Girl in 2017. Camille works with calf, kid, and lamb skin to make easy-to-wear pieces: many which are one of a kind.
-          <br> Camille attended the Fashion Institute of Technology in New York City and graduated with a bachelors degree in accessories
-          design and fabrication. This accomplishment was the fulfillment of her childhood dream of learning how to work with
-          leather to make shoes and handbags from concept to finished product. You can find Camilley Girl at various shops
-          in eastern Pennsylvania and Etsy.com.
-        </p>
+      <p class="paragraph-details">Camille Conaway-Heffner is a Lititz PA based designer who launched her leather
+        jewelry and accessories line Camilley
+        Girl in 2017. <br> Camille works with calf, kid, and lamb skin to make easy-to-wear pieces: many which are one
+        of a kind.
+        <br> Camille attended the Fashion Institute of Technology in New York City and graduated with a bachelors
+        degree in accessories
+        design and fabrication. This accomplishment was the fulfillment of her childhood dream of learning how to work
+        with leather to make shoes, handbags and varies accessories from concept to finished product.
+      </p>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <div class="parallax first-parallax" id="collection">
+    <div class="cold-md-12">
+      <div class="home-page-text">
+        <h1 class="home-text">See the collection</h1>
+        <h2>leather. Hand crafted. Edgy.</h2>
+
       </div>
     </div>
-
-    <div class="parallax first-parallax"  id="collection">
-        <div class="cold-md-12">
-        <div class="home-page-text">
-          <h1 class="home-text">See the collection</h1>
-          <h2>leather. Hand crafted. Edgy.</h2>
-
-        </div>
-        </div>
-      </div>
+  </div>
 
 
 
@@ -89,7 +97,7 @@
         <!-- Here is row 1 -->
         <div class="col-md-4 card-spacing">
           <div class="card" id="port-image-2" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/assorted-necklaces.jpg">
+            <img class="card-img-btm" src="pictures/assorted-necklaces.jpg" alt="Assorted Necklaces">
             <div class="card-block">
             </div>
           </div>
@@ -98,14 +106,14 @@
 
         <div class="col-md-4 card-spacing">
           <div class="card" id="port-image-2" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/arrowhead.jpg">
+            <img class="card-img-btm" src="pictures/arrowhead.jpg" alt="Arrowhead">
           </div>
         </div>
 
         <div class="cold-md-4 card-spacing">
 
           <div class="card" id="port-image-3" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/heartbreaker-chain.jpg" alt="assorted calf and kid keychains">
+            <img class="card-img-btm" src="pictures/heartbreaker-chainsmall.jpg" alt="heartbreaker chain">
             <div class="card-block">
             </div>
           </div>
@@ -116,7 +124,7 @@
         <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-4" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/metalllic-cuffs.jpg" alt="self portrait">
+            <img class="card-img-btm" src="pictures/metalllic-cuffs.jpg" alt="metallic cuffs">
             <div class="card-block">
             </div>
           </div>
@@ -125,7 +133,7 @@
         <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-5" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/assorted-keychains-6.jpg" alt="flowers white and blue">
+            <img class="card-img-btm" src="pictures/tassle-earrings-7.jpg" alt="tassle earrings">
             <div class="card-block card-styles">
             </div>
           </div>
@@ -134,7 +142,7 @@
         <div class="cold-md-4 card-spacing">
 
           <div class="card" id="port-image-6" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/leather-earrings-2.jpg" alt="women in marker drawing">
+            <img class="card-img-btm" src="pictures/bangles-3.jpg" alt="bangles">
           </div>
           <h3><br>Hand crafted<br> <br>Fine Leather goods<br> <br>No Two are the Same</h3>
         </div>
@@ -146,7 +154,7 @@
         <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-7" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/leather-hoop-3.jpg" alt="self portrait">
+            <img class="card-img-btm" src="pictures/leather-hoop-3.jpg" alt="leather hoop">
             <div class="card-block">
             </div>
           </div>
@@ -155,7 +163,7 @@
         <div class="col-md-4 card-spacing">
 
           <div class="card" id="port-image-8" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/kid-keychains-5.jpg" alt="flowers white and blue">
+            <img class="card-img-btm" src="pictures/kid-keychains-5.jpg" alt="keychains">
             <div class="card-block">
             </div>
           </div>
@@ -164,69 +172,145 @@
         <div class="cold-md-4 card-spacing">
 
           <div class="card" id="port-image-9" style="width: 20rem;">
-            <img class="card-img-btm" src="pictures/one.jpg" alt="women in marker drawing">
+            <img class="card-img-btm" src="pictures/one.jpg" alt="small accessorie">
           </div>
         </div>
       </div>
       <!-- This is the 4th row -->
       <div class="row">
-        <div class="col-md-4 card-spacing">
+        <div class="col-md-4 card-spacing text-height">
           <div class="card" id="port-image-10" style="width: 20rem;">
-             <h3><br>For Sale<br> <br>craft fairs<br> <br>Special Order<br><br>On Etsy<br><br>The Purple Robin<br><br>Lilitz, PA<br></h3>
+            <img class="card-img-btm" src="pictures/leather-earrings-2.jpg" alt="leather earrings">
+          </div>
+          <h3><br>Craft Fairs<br> <br>Special Orders<br><br>Etsy Sales<br></h3>
 
-         </div>
-        </div> 
-
-      <div class="col-md-4 card-spacing">
-
-        <div class="card" id="port-image-11" style="width: 20rem;">
-          <img class="card-img-btm" src="pictures/bangles-3.jpg" alt="flowers white and blue">
         </div>
 
-      </div>
-      <div class="cold-md-4 card-spacing">
+        <div class="col-md-4 card-spacing">
 
-        <div class="card" id="port-image-12" style="width: 20rem;">
-          <img class="card-img-btm" src="pictures/distressed-brac.jpg" alt="women in marker drawing">
-          <div class="card-block">
+          <div class="card" id="port-image-11" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/whispy-earrings-8.jpg" alt="whispy earrings">
+          </div>
+
+        </div>
+        <div class="cold-md-4 card-spacing">
+
+          <div class="card" id="port-image-12" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/rubber_squares_necklace.jpg" alt="rubber square necklace">
+            <div class="card-block">
+            </div>
           </div>
         </div>
       </div>
+      <!-- 5th Row of items -->
+      <div class="row">
+        <div class="col-md-4 card-spacing text-height">
+          <div class="card" id="port-image-10" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/earrings-5.jpg" alt="earrings">
+          </div>
+        </div>
+
+        <div class="col-md-4 card-spacing">
+
+          <div class="card" id="port-image-11" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/nude-necklace.jpg" alt="nude color necklace">
+          </div>
+
+        </div>
+        <div class="cold-md-4 card-spacing">
+
+          <div class="card" id="port-image-12" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/rubber.jpg" alt="rubber necklace">
+            <div class="card-block">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 6th Row of items -->
+      <div class="row">
+        <div class="col-md-4 card-spacing">
+
+          <div class="card" id="port-image-7" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/large-cord.jpg" alt="large accessory">
+            <div class="card-block">
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-4 card-spacing">
+
+          <div class="card" id="port-image-8" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/assorted-keychains-6.jpg" alt="assorted keychains">
+            <div class="card-block">
+            </div>
+          </div>
+          <h3><br>That Originality<br><br>You've Been Waiting For<br></h3>
+
+
+        </div>
+        <div class="cold-md-4 card-spacing">
+
+          <div class="card" id="port-image-9" style="width: 20rem;">
+            <img class="card-img-btm" src="pictures/calfskin-earrings-1.jpg" alt="calfskin earrings">
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
+
+  <!-- where to shop -->
+  <div class="parallax first-parallax" id="collection">
+    <div class="cold-md-12">
+      <div class="home-page-text">
+        <h1 class="home-text">Where to Shop</h1>
+        <h2>Lititz, PA. Online.</h2>
+      </div>
+    </div>
   </div>
 
+  <div class="container container1 containPurple">
+    <div class="row bio-row">
+      <div class="col-md-12">
+        <img class="Image2purple" id="contact" src="pictures/purple-robin.jpg" alt="Purple Robin image">
+      </div>
+      <p class="paragraph-details">You can find Camilley Girl at various craft shows and shops in eastern Pennsylvania
+        and on Etsy.com. One staple location is the Purple Robin Reserve on Main street of downtown Lititz, PA. Camille
+        is active in the community and can often be seen dropping off new product and greeting customers.
+      </p>
+    </div>
+  </div>
+  <span class="spacer"></span></h3>
 
-  
 
-
-    <footer class="footer" id="contact">
-        <div class="container footer-style">
+  <footer class="footer">
+    <div class="container footer-style">
 
       <h3 class="connectFooter">
-          <div class="lead-body">Contact the Designer </div>
-         <h3>Shop at Etsy or for Customer Orders Email Camilley</h3>
-       
-        <span class="spacer"></span></h3>
+        <div class="lead-body">Contact the Designer </div>
+        <h3>Shop on Etsy or for Custom Orders Email Camilley</h3>
+
+        <span class="spacer"></span>
+      </h3>
       <!-- links to etsy, and email -->
       <div class="container">
-      <div class="linkimages">
-        <a href="https://www.etsy.com/shop/CamilleyGirl?ref=search_shop_redirect" target="_blank">
-          <img border="0" alt="Etsy account link" src="pictures/if_etsy_2581803.png" width="100px">
-        </a>
-      </div>
-      <span class="spacer"></span>
-      <div class="linkimages">
+        <div class="linkimages">
+          <a href="https://www.etsy.com/shop/CamilleyGirl?ref=search_shop_redirect" target="_blank">
+            <img border="0" alt="Etsy account link" src="pictures/if_etsy_2581803.png" width="100px">
+          </a>
+        </div>
+        <span class="spacer"></span>
+        <div class="linkimages">
 
-        <a href="mailto:Camilleygirl@gmail.com">
-          <img border="0" alt="Cammille's email link" src="pictures/email.png" width="100px">
-        </a>
-      </div>
+          <a href="mailto:Camilleygirl@gmail.com">
+            <img border="0" alt="Cammille's email link" src="pictures/email.png" width="100px">
+          </a>
+        </div>
       </div>
       <p class="copyright">Camilley Girl @ 2018 </p>
     </div>
-    </footer>
- 
+  </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
